--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row mt-4">
-    <div class="col-8 p-0">
-      <div class="row bg-light align-items-center">
+  <div class="row mt-5">
+    <div class="col-md-8 col-12 order-md-1 order-2">
+      <div class="bg-light align-items-center">
         <h2 class="w-100">
           Have a coupon?
           <a class="text-danger" style="text-decoration: underline"
@@ -65,7 +65,6 @@
                 First Name is not valid
               </small>
             </div>
-
           </div>
           <div class="col-6 float-left">
             <div
@@ -364,7 +363,6 @@
           <small class="font-italic" *ngIf="postcode.errors.required">
             Postcode/ZIP is required
           </small>
-
         </div>
         <h5 class="border-bottom w-100 p-2 mt-4 mr-4">Shipping Details</h5>
         <div class="form-group mt-4 mr-4">
@@ -376,7 +374,7 @@
         </div>
       </form>
     </div>
-    <div class="col bg-light p-4 ml-4">
+    <div class="col-md-4 col-12 bg-light p-4 ml-0 order-md-2 order-1">
       <h5 class="border-bottom w-100 p-4">Shipping Details</h5>
       <table class="table table-borderless text-muted">
         <thead>
@@ -438,7 +436,6 @@
               for="customRadio1"
               >CHECK PAYMENT</label
             >
-
           </div>
         </div>
         <div class="bg-white p-4 mt-4">
