--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -82,7 +82,7 @@
               (click)="fillAccount()"
               style="font-size: 13px"
             >
-              Login with fake account
+              Demo Account
             </small>
           </div>
         </div>
