--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -1,6 +1,6 @@
 <div class="row container-xl mx-auto mt-5">
   <div
-    class="col-lg-3 col-12 shadow d-xl-block d-none"
+    class="col-lg-2 col-12 shadow d-xl-block d-none"
     style="height: fit-content"
   >
     <div class="row p-4 align-items-center bg-primary" id="nav-category">
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xl-9 col-12 pl-md-5">
+  <div class="col-xl-10 col-12 pl-md-5">
     <!-- nav-catagory -->
     <div class="row p-2 align-items-center" id="nav-category">
       <div class="col-12 col-md-4">
@@ -58,5 +58,5 @@
     </div>
     <!-- paging -->
   </div>
-  <app-deal-week class="shadow my-5"></app-deal-week>
+  <app-deal-week class="my-5"></app-deal-week>
 </div>
