--- a/src/app/components/confirmation/confirmation.component.html
+++ b/src/app/components/confirmation/confirmation.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <h5 class="text-success text-center">
     Thank you. Your order has been received.
   </h5>
@@ -15,7 +15,7 @@
         <ul class="col">
           <li>: {{ order.id }}</li>
           <li>: {{ order.date | date: "dd/MM/yyyy" }}</li>
-          <li>: USD {{ order.totalPrice }}</li>
+          <li>: {{ order.totalPrice | currency: "USD" }}</li>
           <li>: {{ order.paymentMethod | titlecase }}</li>
         </ul>
       </div>
@@ -71,7 +71,7 @@
             <td>
               <p>{{ item.item.brand }}</p>
             </td>
-            <td>x 0{{ item.quantity }}</td>
+            <td>{{ item.quantity }}</td>
             <td>{{ item.item.price + item.quantity | currency: "USD" }}</td>
           </tr>
 
@@ -83,7 +83,7 @@
               <h6></h6>
             </td>
             <td>
-              <p>$2210.00</p>
+              <p>{{ order.totalPrice | currency: "USD" }}</p>
             </td>
           </tr>
         </tbody>
