--- a/src/app/components/deal-week/deal-week.component.html
+++ b/src/app/components/deal-week/deal-week.component.html
@@ -1,15 +1,22 @@
 <div class="my-50">
   <div class="w-md-75 w-100 px-md-0 px-3 text-center mx-auto my-5">
-    <h5 class="text-uppercase font-weight-bold">best sellers</h5>
+    <h5 class="text-uppercase font-weight-bold">deal of the week</h5>
     <p>Versatile sportswear. The Naomi Osaka Capsule Collection</p>
   </div>
 
   <div class="row deal">
+    <div class="col-0 d-none col-lg-3 d-lg-block">
+      <img
+        class="deal-img"
+        src="../../../assets/img/deal-of-the-week.webp"
+        alt=""
+      />
+    </div>
     <div class="col-12 col-lg-9">
       <div class="row">
         <div class="col-4 my-3" *ngFor="let item of productDeal">
           <div
-            class="row d-flex flex-md-row flex-column"
+            class="row d-flex flex-md-row flex-column shadow1 p-2"
             routerLink="/productDetail/{{ item['id'] }}"
           >
             <div class="col-lg-4 col-md-6 mb-auto">
@@ -25,13 +32,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-0 d-none col-lg-3 d-lg-block">
-      <img
-        class="deal-img"
-        src="../../../../assets/img/layout-3-img-5.webp"
-        alt=""
-      />
     </div>
   </div>
 </div>
