--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="bg-secondary p-5 mt-5">
+<div class="bg-secondary p-5 mt-5 footer">
   <div class="container my-3">
     <div class="row">
       <div class="col-xl-3 col-md-6 col-sm-12">
@@ -79,7 +79,7 @@
       </div>
     </div>
     <p class="text-white text-center my-3" style="opacity: 0.6">
-      Copyright &#169;2022 All rights reserved | This template is made with
+      Copyright &#169;2022 All rights reserved | This website is built with
       <i class="fas fa-heart text-primary px-1"></i> by
       <span class="text-primary">NhatTV9 NgaHT10 </span>
     </p>
