--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -14,7 +14,8 @@
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
         <video
-          id="img-slide"
+          width="100%"
+          height="100%"
           loop=""
           muted=""
           autoplay=""
