--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -54,10 +54,9 @@ li a {
   padding: 5px 10px;
 }
 .searchBox:hover > .searchInput {
-  width: 200px;
+  width: 300px;
   padding: 3px 10px;
 }
-
 .searchBox:hover > .searchButton {
   color: white;
 }
@@ -115,7 +114,7 @@ li a {
 
 @media screen and (max-width: 620px) {
   .searchBox:hover > .searchInput {
-    width: 150px;
+    width: 200px;
     padding: 0 6px;
   }
 }
@@ -135,8 +134,6 @@ li a {
   width: 100%;
   position: absolute;
   right: 0px;
-  margin-top: 10px;
-  overflow-y: scroll;
 }
 .cart1 {
   display: none;
@@ -153,5 +150,8 @@ li a {
     flex-direction: row;
     justify-content: end;
     gap: 10px;
+  }
+  #drop-down {
+    position: absolute;
   }
 }
