--- a/src/app/components/order-list/order-list.component.html
+++ b/src/app/components/order-list/order-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container order-list">
   <h3 class="font-weight-bold text-center">Your orders</h3>
   <table class="table mt-4" *ngIf="orders.length > 0">
     <thead>
@@ -16,7 +16,7 @@
       >
         <th scope="row">{{ order.id }}</th>
         <td>{{ order.date | date: "dd/MM/yyyy" }}</td>
-        <td>{{ order.totalPrice }}</td>
+        <td>{{ order.totalPrice | currency: "USD" }}</td>
         <td>{{ order.paymentMethod | uppercase }}</td>
       </tr>
     </tbody>
