--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -12,10 +12,14 @@
             (click)="clickImg(img, i)"
           >
             <div *ngIf="i < 5">
-              <div class="item-img" *ngIf="i == imgcurrent">
-                <img [src]="img" class="mx-auto" id="img-item" />
+              <div class="item-img mr-1" *ngIf="i == imgcurrent">
+                <img
+                  [src]="img"
+                  class="mx-auto border border-primary rounded"
+                  id="img-item"
+                />
               </div>
-              <div *ngIf="i != imgcurrent">
+              <div *ngIf="i != imgcurrent" class="mr-1">
                 <img [src]="img" class="mx-auto" id="img-item" />
               </div>
             </div>
@@ -25,27 +29,53 @@
     </div>
     <div class="col-lg-6 col-12 p-5">
       <h3>{{ detailProduct.brand }}</h3>
-      <h2 class="text-warning">
+      <h2 class="text-warning text-uppercase">
         {{ detailProduct.price | currency: "USD" }}
       </h2>
       <p>
-        <span class="d-inline-block w-15">Material</span>
-        <span class="text-primary"
-          >:{{ detailProduct.features[0]["Outer Material"] }}</span
-        >
+        <span class="d-inline-block">Material:</span>
+        <span class="text-primary pl-2">{{
+          detailProduct.features[0]["Outer Material"]
+        }}</span>
       </p>
       <hr />
       <p class="product-details">
         {{ detailProduct.product_details }}
       </p>
-      <div class="my-3" id="icon-product">
+      <div
+        id="icon-product"
+        (click)="cartService.addItem(detailProduct)"
+        *ngIf="
+          cartService.getQuantityItem(detailProduct.id) === 0;
+          else updateQuantity
+        "
+      >
         <button
           class="btn bg-primary gradient text-capitalize text-white px-4"
-          (click)="addItem(detailProduct)"
+          (click)="cartService.addItem(detailProduct)"
         >
           add to card
         </button>
       </div>
+      <ng-template #updateQuantity>
+        <div class="border rounded" style="width: fit-content">
+          <button
+            (click)="cartService.remove(detailProduct)"
+            class="btn border-right px-2"
+          >
+            <i class="fas fa-minus"></i>
+          </button>
+          <span class="px-3">{{
+            cartService.getQuantityItem(detailProduct.id)
+          }}</span>
+          <button
+            (click)="cartService.addItem(detailProduct)"
+            class="btn border-left px-2"
+          >
+            <i class="fas fa-plus"></i>
+          </button>
+        </div>
+      </ng-template>
     </div>
   </div>
 </div>
