--- a/src/app/components/product-detail/product-detail.component.scss
+++ b/src/app/components/product-detail/product-detail.component.scss
@@ -1,10 +1,5 @@
-.detailProductImg {
-  max-width: 100%;
-  height: 400px;
-  object-fit: contain;
-}
 #img-product-detail {
-  width: 500px;
+  width: 100%;
   height: 400px;
   object-fit: contain;
 }
@@ -20,11 +15,7 @@
   white-space: break-spaces;
   line-height: 2;
 }
-.item-img {
-  border: 0.3px solid black;
-  border-radius: 5px;
-  padding: 3px;
-}
+
 @media screen and (max-width: 576px) {
   #img-item {
     width: 40px;
