--- a/src/app/components/shoes-container/shoes-container.component.html
+++ b/src/app/components/shoes-container/shoes-container.component.html
@@ -9,7 +9,11 @@
         /> -->
       </div>
       <div class="col-md-4 col-12 text-center">
-        <h3 class="text-uppercase font-weight-bold">deal of the week</h3>
+        <img
+          src="../../../assets/img/BestSeller.png"
+          alt=""
+          style="width: 400px; object-fit: contain"
+        />
       </div>
       <div class="col-md-4 col-0">
         <!-- <img
